--- a/styles/style.css
+++ b/styles/style.css
@@ -8,10 +8,26 @@ html {
   block-size: 100%;
 }
 
+:root{
+  --white: #fff;
+  --black: #000;
+  --gray: #545454;
+  --m-xl: 32px;
+  --m-l: 30px;
+  --m-m: 26px;
+  --m-s: 6px;
+  --m-xs: 5px;
+  --font-family: "Fira Sans Condensed", sans-serif;
+  --second-family: "Oswald", sans-serif;
+}
+
 .page {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   inline-size: 1200px;
   block-size: 100%;
-  margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
@@ -35,4 +51,270 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.button{
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: #fff;
+  background-color: #00000000;
+  border: 1px solid #fff;
+}
+
+.button:hover{
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.button:active{
+  background-color: #545050;
+}
+
+.button:focus{
+  outline: none;
+}
+
+.button:focus-visible{
+  outline: 1px solid var(--white);
+  outline-offset: 1px;
+}
+
+.content{
+  display: flex;
+  min-width: 1140px;
+  gap: 30px;
+  align-items: end;
+}
+
+.result{
+  min-width: 711px;
+}
+
+.result__video-container{
+  width: 100%;
+  min-height: 386px;
+  position: relative;
+}
+
+.result__video{
+  width: 100%;
+}
+
+.search-form{
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.search-form__fieldset{
+  min-width: 212px;
+  min-height: 49px;
+  border: none;
+  appearance: none;
+}
+
+.search-form__fieldset-title{
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 18px;
+  color: #fff;
+  margin-bottom: var(--m-xs);
+}
+
+.search-form__label{
+  display: flex;
+  column-gap: var(--m-xs);
+  width: fit-content;
+}
+
+.search-form__textfield{
+  background-color: #00000000;
+  border: none;
+  border-bottom: 1px solid var(--white);
+  border-top: 1px solid var(--white);
+  min-width: 225px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.search-form__textfield:active{
+  outline: 1px solid var(--white);
+}
+
+.search-form__textfield:focus{
+  outline: none;
+}
+
+.search-form__textfield:focus-visible{
+  outline-offset: 1px;
+  outline: 1px solid var(--white) ;
+}
+
+.search-form__checkbox-list{
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__pseudo-checkbox{
+  width: 19px;
+  height: 19px;
+  border: 1px solid var(--white);
+}
+
+.search-form__pseudo-checkbox:focus{
+  outline: none;
+}
+
+.search-form__pseudo-checkbox:nth-of-type(.search-form__pseudo-checkbox):focus-visible{
+  outline: 1px solid var(--white);
+  outline-offset: 1px;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after{
+  content: "";
+  display: block;
+  width: calc(100% - 4px);
+  height: calc(100% - 4px);
+  background-color: var(--white);
+  margin: 2px;
+}
+
+.search-form__label-text{
+  font-family: var(--font-family);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.6px;
+  text-align: left;
+}
+
+.search-form__label-text:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
+.search-form__submit-button{
+  width: 194px;
+  height: 34px;
+}
+
+.content__details{
+  width: 100%;
+  height: 100%;
+}
+
+.content__details{
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+}
+
+.content__list{
+  max-height: 298px;
+  width: 100%;
+  overflow-y: auto;
+  color: var(--white);
+  position: relative;
+}
+
+.title{
+  font-family: var(--second-family);
+  font-weight: 700; 
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.content__accent{
+  color: #545050;
+}
+
+.content__video-card-thumbnail{
+  width: 100%;
+}
+
+.content__list::-webkit-scrollbar{
+  width: 0;
+}
+
+.content__list-item:not(:last-child){
+  margin-bottom: 30px;
+}
+
+.content__list-item:active{
+  background-color: var(--gray);
+}
+
+.content__list:focus{
+  border: 1px solid var(--white);
+}
+.content__video-card{
+  display: flex;
+  align-items: start;
+}
+
+.content__video-card-thumbnail{
+  width: 194px;
+  height: 103px;
+}
+
+.content__video-card-description{
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 90%;
+  color: var(--white);
+}
+
+.content__video-card-description-container{
+  width: 50.2%;
+  height: 100%;
+}
+
+.content__card-link{
+  color:  var(--white);
+  text-decoration: none;
+  display: block;
+  margin: 2px;
+}
+
+.content__card-link:hover{
+  text-decoration: underline;
+}
+
+.content__video-card-title{
+  font-family: var(--second-family);
+  font-family: var(--second-family);
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: var(--white);
+}
+
+.content__video-card-description + .content__video-card-title:hover{
+  cursor: pointer;
+}
+
+.content__card-link_current:active{
+  background-color: var(--gray);
+  text-decoration: underline;
+}
+.more-button{
+  border: 1px solid #fff;
+  min-width: 399px;
+  min-height: 34px;
 }
