--- a/styles/style.css
+++ b/styles/style.css
@@ -71,6 +71,7 @@ ol {
   color: #fff;
   background-color: #00000000;
   border: 1px solid #fff;
+  min-height: 34px;
 }
 
 .button:hover{
@@ -98,18 +99,18 @@ ol {
   align-items: end;
 }
 
-.result{
-  min-width: 711px;
-}
-
 .result__video-container{
-  width: 100%;
-  min-height: 386px;
-  position: relative;
+  width: 711px;  
+  height: 386px; 
+  position: relative;  
+  margin-bottom: 16px;
 }
 
 .result__video{
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .search-form{
@@ -139,6 +140,11 @@ ol {
   width: fit-content;
 }
 
+.search-form__label:has(:focus-visible){
+  outline: 1px solid var(--white);
+  outline-offset: 1px;
+}
+
 .search-form__textfield{
   background-color: #00000000;
   border: none;
@@ -148,7 +154,7 @@ ol {
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 18px;
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--white);
 }
 
 .search-form__textfield:active{
@@ -159,7 +165,7 @@ ol {
   outline: none;
 }
 
-.search-form__textfield:focus-visible{
+.search-form__textfield:has(:focus-visible){
   outline-offset: 1px;
   outline: 1px solid var(--white) ;
 }
@@ -173,15 +179,6 @@ ol {
   width: 19px;
   height: 19px;
   border: 1px solid var(--white);
-}
-
-.search-form__pseudo-checkbox:focus{
-  outline: none;
-}
-
-.search-form__pseudo-checkbox:nth-of-type(.search-form__pseudo-checkbox):focus-visible{
-  outline: 1px solid var(--white);
-  outline-offset: 1px;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after{
@@ -201,24 +198,21 @@ ol {
   text-align: left;
 }
 
-.search-form__label-text:hover{
+.search-form__label:hover .search-form__label-text{
   text-decoration: underline;
   cursor: pointer;
 }
+
 .search-form__submit-button{
-  width: 194px;
-  height: 34px;
+  min-width: 194px;
 }
 
 .content__details{
   width: 100%;
-  height: 100%;
-}
-
-.content__details{
+  height: 100%;  
   display: flex;
   flex-direction: column;
-  gap: 26px;
+  gap: 20px;
 }
 
 .content__list{
@@ -242,34 +236,21 @@ ol {
   color: #545050;
 }
 
-.content__video-card-thumbnail{
-  width: 100%;
-}
-
-.content__list::-webkit-scrollbar{
-  width: 0;
-}
-
 .content__list-item:not(:last-child){
   margin-bottom: 30px;
 }
 
-.content__list-item:active{
-  background-color: var(--gray);
-}
-
-.content__list:focus{
-  border: 1px solid var(--white);
-}
 .content__video-card{
   display: flex;
   align-items: start;
+
 }
 
 .content__video-card-thumbnail{
-  width: 194px;
   height: 103px;
+  width: 194px;
 }
+
 
 .content__video-card-description{
   font-family: var(--font-family);
@@ -291,12 +272,25 @@ ol {
   margin: 2px;
 }
 
+.content__card-link:focus{
+  outline: none;
+}
+
+.content__card-link:focus-visible{
+  outline: 1px solid var(--white);
+  outline-offset: 1px;
+  padding: 2px;
+}
+
+.content__card-link:active{
+  background-color: var(--gray);
+}
+
 .content__card-link:hover{
   text-decoration: underline;
 }
 
 .content__video-card-title{
-  font-family: var(--second-family);
   font-family: var(--second-family);
   font-weight: 700;
   font-size: 30px;
@@ -309,12 +303,7 @@ ol {
   cursor: pointer;
 }
 
-.content__card-link_current:active{
-  background-color: var(--gray);
-  text-decoration: underline;
-}
 .more-button{
   border: 1px solid #fff;
   min-width: 399px;
-  min-height: 34px;
 }
